<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ChoHanActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins"/>

        <TextView
            android:id="@+id/txt_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/wager_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wager"
            android:padding="16dp"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:backgroundTint="@color/teal_700"/>

        <TextView
            android:id="@+id/txt_wager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:padding="16dp"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:backgroundTint="@color/teal_700"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/guess_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess"
            android:padding="16dp"/>

        <ToggleButton
            android:id="@+id/btn_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOn="@string/even"
            android:textOff="@string/odd" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_roll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal_700"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/txt_die1"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@color/teal_700"
            android:text="@string/zero"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="72sp"
            android:textColor="@color/white"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/txt_die2"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@color/teal_700"
            android:text="@string/zero"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="72sp"
            android:textColor="@color/white"
            android:layout_margin="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal_700"/>

</LinearLayout>