<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".WalletActivity">

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_label"
        android:textAlignment="center"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins"/>

        <TextView
            android:id="@+id/txt_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_roll"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@color/colorPrimary"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textSize="72sp"
        android:textColor="@color/teal_200"/>

</LinearLayout>